--- a/homework/Day_003-1_HW.ipynb
+++ b/homework/Day_003-1_HW.ipynb
@@ -16,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -28,21 +26,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "國家            美國\n",
+       "人口    7124841444\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data = {'國家': ,\n",
-    "        '人口': }\n",
-    "data = pd.DataFrame()"
+    "# 初始化\n",
+    "data = {'國家': ['台灣','美國','泰國'],\n",
+    "        '人口': [0,0,0]}\n",
+    "# 轉換成 DataFrame\n",
+    "data = pd.DataFrame(data)\n",
+    "# 隨機填入人口\n",
+    "data['人口'] = np.random.randint(10000000000,size=len(data['人口'] ))\n",
+    "data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.loc[data['人口'].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -63,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
