--- a/homework/Day_003-1_HW.ipynb
+++ b/homework/Day_003-1_HW.ipynb
@@ -26,18 +26,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國家</th>\n",
+       "      <th>人口</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2250523802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>美國</td>\n",
+       "      <td>5595354497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>泰國</td>\n",
+       "      <td>7227282912</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "國家            美國\n",
-       "人口    7124841444\n",
-       "Name: 1, dtype: object"
+       "   國家          人口\n",
+       "0  台灣  2250523802\n",
+       "1  美國  5595354497\n",
+       "2  泰國  7227282912"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,24 +94,30 @@
     "data = pd.DataFrame(data)\n",
     "# 隨機填入人口\n",
     "data['人口'] = np.random.randint(10000000000,size=len(data['人口'] ))\n",
-    "data"
+    "data # 預覽"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "國家            泰國\n",
+       "人口    7227282912\n",
+       "Name: 2, dtype: object"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data.loc[data['人口'].idxmax()]"
+    "data.loc[data['人口'].idxmax()] # 取人口最大row"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
