--- a/homework/Day_018_HW.ipynb
+++ b/homework/Day_018_HW.ipynb
@@ -545,14 +545,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# object的平均會出錯 , 因為他無法對非數值類型平均"
+    "## 作業一：object的平均會出錯 , 因為他無法對非數值類型平均，max也沒有全部類型顯示"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 作業二：文字類型 , 但可以分類到類別型特徵"
+    "## 作業二：文字類型 , 但可以分類到類別型特徵，一堆無法定義類型都可以分配至類別型特徵，所以應該最難處理．"
    ]
   },
   {
